modifed scroll x overflow issue

--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -5,7 +5,10 @@
 
 *{
     scroll-behavior: smooth;
-   
+         box-sizing: border-box;
+     margin: 0;
+     padding: 0;
+      
 }
 
 .custom-scroll-hidden::-webkit-scrollbar{
